# real-estate-rag-assistant

./: .dockerignore  Dockerfile  Dockerfile.api  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/components/: chat_message.py  footer.py  sidebar.py  source_panel.py
backend/: api.py  auth.py
config/: settings.py
data/vector_store/: index.faiss  index.pkl
pages/: chat.py  login.py
rag/: chain.py  embeddings.py  ingest.py  loader.py  memory.py  prompt.py  retriever.py  splitter.py  vector_store.py
tests/: test_embeddings.py  test_groq.py  test_rag.py  test_retriever.py  test_splitter.py
